Enhance HTML to PDF conversion with webhook support and improve logo handling

--- a/example/docker/compose.yaml
+++ b/example/docker/compose.yaml
@@ -7,3 +7,5 @@ services:
       - "3000:3000"
      # Or more secure:
      # - "127.0.0.1:3000:3000"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"     
