Update .golangci.yml to exclude specific error return value checks

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -30,6 +30,9 @@ issues:
     - ^tools$
     - ^tools/.*
 
+  exclude:
+    - 'Error return value of .*.Close.* is not checked'
+
 issues-settings:
   gocyclo:
     min-complexity: 15
