Add constants for Gotenberg API fields and headers; update http-client dependency to v1.3.0; remove benchmark tests

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -32,6 +32,7 @@ issues:
 
   exclude:
     - 'Error return value of .*.Close.* is not checked'
+    - 'Error return value of `io.Copy` is not checked'
 
 issues-settings:
   gocyclo:
